--- a/src/FirstApplication/FirstApplication.ConsoleApp/appsettings.json
+++ b/src/FirstApplication/FirstApplication.ConsoleApp/appsettings.json
@@ -2,9 +2,16 @@
   "ConnectionStrings": {
     "UserConnectionString": "Server=192.168.1.94;Port=5432;Database=UsersDb;User Id=admin;Password=admin1234;"
   },
+  //Local
   "ApiUrls": {
     "DummyApiUrl": "https://localhost:6002",
     "DummyGrpcUrl": "https://localhost:6003",
     "DummyApiAggregatorUrl": "https://localhost:6001"
   }
+  //Docker
+  //"ApiUrls": {
+  //  "DummyApiUrl": "http://localhost:8002",
+  //  "DummyGrpcUrl": "http://localhost:8003",
+  //  "DummyApiAggregatorUrl": "http://localhost:8001"
+  //}
 }
