--- a/src/SecondApplication/SecondApplication.AppConsole/appsettings.json
+++ b/src/SecondApplication/SecondApplication.AppConsole/appsettings.json
@@ -2,8 +2,14 @@
   "ConnectionStrings": {
     "UserConnectionString": "Server=192.168.1.94;Port=5432;Database=PostsDb;User Id=admin;Password=admin1234;"
   },
+  //Local
   "ApiUrls": {
     "DummyApiUrl": "https://localhost:6002",
     "DummyGrpcUrl": "https://localhost:6003"
   }
+  //Docker
+  //"ApiUrls": {
+  //  "DummyApiUrl": "http://localhost:8002",
+  //  "DummyGrpcUrl": "http://localhost:8003"
+  //}
 }
